--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: 焦海林的个人博客
-email: larrykong2016@gmail.com
+email: 2513386874@qq.com
 description: > #焦海林的个人博客
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://Jonlonly.github.io/index.html" # the base hostname & protocol for your site
+url: "http://jonlonly.github.io/index.html" # the base hostname & protocol for your site
 
 # Paginate（分页）
 #gems: [jekyll-paginate]
@@ -29,11 +29,11 @@ favicon: /assets/image/favicon.ico
 
 # 博客作者相关
 author:
-  name: Lingxian Kong
-  email: larrykong2016@gmail.com
+  name: Hailin Jiao
+  email: 2513386874@qq.com
   link: http://Jonlonly.github.io/
-  weibo: http://www.weibo.com/Jonlonly
-  weibo_username: Lingxian_Kong
+  weibo: http://weibo.cn/qr/userinfo?uid=5706523790
+  weibo_username: 冷艳的雪夜枫华555
   github: https://github.com/Jonlonly
   github_username: Jonlonly
 
@@ -59,4 +59,4 @@ image: /assets/image/
 
 # disqus 设置
 disqus:
-  shortname: Jonlonly
+  shortname: Hailin Jiao
