--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: 孔令贤的个人博客
-email: larrykong2016@gmail.com
-description: > #孔令贤的个人博客
+title: 焦海林的个人博客
+email: 2513386874@qq.com
+description: > #焦海林的个人博客
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://lingxiankong.github.io/index.html" # the base hostname & protocol for your site
+url: "http://jonlonly.github.io/index.html" # the base hostname & protocol for your site
 
 # Paginate（分页）
 #gems: [jekyll-paginate]
@@ -29,13 +29,13 @@ favicon: /assets/image/favicon.ico
 
 # 博客作者相关
 author:
-  name: Lingxian Kong
-  email: larrykong2016@gmail.com
-  link: http://lingxiankong.github.io/
-  weibo: http://www.weibo.com/lingxiankong
-  weibo_username: Lingxian_Kong
-  github: https://github.com/lingxiankong
-  github_username: lingxiankong
+  name: Hailin Jiao
+  email: 2513386874@qq.com
+  link: http://Jonlonly.github.io/
+  weibo: http://weibo.cn/qr/userinfo?uid=5706523790
+  weibo_username: 冷艳的雪夜枫华555
+  github: https://github.com/Jonlonly
+  github_username: Jonlonly
 
 
 locals:
@@ -59,4 +59,4 @@ image: /assets/image/
 
 # disqus 设置
 disqus:
-  shortname: lingxiankong
+  shortname: Hailin Jiao
